--- a/.github/workflows/push-to-ghcr.yaml
+++ b/.github/workflows/push-to-ghcr.yaml
@@ -10,8 +10,8 @@ jobs:
     steps:
      - uses: actions/checkout@v4
         
-     - name: Log in to the Container registry
-       uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567
+     - name: Log in to the GH Container registry
+       uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: ${{ github.actor }}
@@ -22,5 +22,5 @@ jobs:
        with:
          context: .
          push: true
-         tags: ghcr.io/qjoly/xelatex
+         tags: ghcr.io/voioo/xelatex
 
